--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,24 @@
 {
-    "name": "brucegithub/namespace-protector",
-    "require": {
-        "nikic/php-parser": "^4.4",
-        "symfony/console": "^5.1",
-        "graphp/graphviz": "^0.2.2"
+  "name": "brucegithub/namespace-protector",
+  "require": {
+    "nikic/php-parser": "^4.4",
+    "symfony/console": "^5.1"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-master"
+  },
+  "autoload": {
+    "psr-4": {
+      "NamespaceProtector\\": "src"
     },
-    "autoload": {
-        "psr-4": {
-            "App\\": "."
-        },
-        "classmap": ["src"]
-    },
-    "authors": [
-        {
-            "name": "BruceGitHub",
-            "email": "roberto.diana@gmail.com"
-        }
+    "classmap": [
+      "src"
     ]
+  },
+  "authors": [
+    {
+      "name": "BruceGitHub",
+      "email": "roberto.diana@gmail.com"
+    }
+  ]
 }
