--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   },
   "require": {
     "nikic/php-parser": "^4.4",
-    "symfony/console": "^5.1"
+    "symfony/console": "^5.1",
+    "ext-json": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master"
