--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     "bin-dir": "bin"
   },
   "require": {
+    "ext-json": "*",
     "nikic/php-parser": "^4.4",
+    "psr/simple-cache": "^1.0",
     "symfony/console": "^5.1",
-    "ext-json": "*"
+    "thecodingmachine/safe": "^1.1",
+    "webmozart/assert": "^1.8"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master"
