--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   },
   "require-dev": {
     "mikey179/vfsstream": "^1.6",
+    "phpspec/prophecy-phpunit": "^2.0",
     "phpunit/phpunit": "^9",
     "roave/security-advisories": "dev-master"
   },
