--- a/namespace-protector-config.json
+++ b/namespace-protector-config.json
@@ -2,10 +2,7 @@
   "version": "0.1.0",
   "start-path": "src",
   "composer-json-path": "./",
-  "public-entries": [
-  ],
-  "private-entries": [
-    "\\safe\\"
-  ],
+  "public-entries": ["safe","phpParse"],
+  "private-entries": [],
   "mode": "MODE_MAKE_VENDOR_PRIVATE"
 }
