--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - 7.3
 
 before_install: 
-install: composer install --prefer-dist --prefer-stable --no-interaction
+install: composer install --no-interaction
 
 script: 
   - vendor/bin/phpunit tests
