--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "brucegithub/namespace-protector",
   "description": "A tool to protect your namespace",
   "type": "library",
+  "license": "MIT",
   "bin": [
     "bin/namespace-protector"
   ],
