--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ install: composer install --no-interaction
 
 script: 
   - vendor/bin/phpunit tests
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
