--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,8 @@ install: composer install --no-interaction
 script: 
   - vendor/bin/phpunit tests
   - vendor/bin/phpunit --coverage-clover=coverage.xml
+  
 
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
