--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install: composer install --no-interaction
 
 script: 
   - vendor/bin/phpunit tests
-  - vendor/bin/phpunit --coverage-clover=coverage.xml tests
-  
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+    - bash <(curl -s https://codecov.io/bash)
