Adds cache flag to config

--- a/namespace-protector-config.json
+++ b/namespace-protector-config.json
@@ -4,5 +4,6 @@
   "composer-json-path": "./",
   "public-entries": [],
   "private-entries": [],
-  "mode": "MODE_MAKE_VENDOR_PRIVATE"
+  "mode": "MODE_MAKE_VENDOR_PRIVATE",
+  "cache": false
 }
