Add NamespaceProtectorProcess class

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,6 +3,7 @@
          backupGlobals="false"
          cacheResult="false"
          colors="true"
+         processIsolation="true"
          bootstrap="vendor/autoload.php"
         >
     <testsuites>
