Adds strict type

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -89,6 +89,8 @@ return PhpCsFixer\Config::create()
         'trim_array_spaces' => true,
         'unary_operator_spaces' => true,
         'whitespace_after_comma_in_array' => true,
+        'declare_strict_types' => true,
     ))
     //->setIndent("\t")
+    ->setRiskyAllowed(true)
     ->setLineEnding("\n");
