--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -47,7 +47,7 @@ return PhpCsFixer\Config::create()
         // 'no_mixed_echo_print' => array('use' => 'echo'),
         'no_multiline_whitespace_around_double_arrow' => true,
         // 'no_short_bool_cast' => true,
-        // 'no_singleline_whitespace_before_semicolons' => true,
+        'no_singleline_whitespace_before_semicolons' => true,
         'no_spaces_around_offset' => true,
         // 'no_trailing_comma_in_list_call' => true,
         // 'no_trailing_comma_in_singleline_array' => true,
