--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -19,7 +19,7 @@ return PhpCsFixer\Config::create()
         'braces' => array(
             'allow_single_line_closure' => true,
         ),
-        // 'cast_spaces' => true,
+        'cast_spaces' => true,
         // 'class_definition' => array('singleLine' => true),
         'concat_space' => array('spacing' => 'one'),
         'declare_equal_normalize' => true,
