--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -77,15 +77,15 @@ return PhpCsFixer\Config::create()
         // 'phpdoc_types' => true,
         // 'phpdoc_var_without_name' => true,
         // 'pre_increment' => true,
-        // 'return_type_declaration' => true,
-        // 'self_accessor' => true,
+        'return_type_declaration' => true,
+        'self_accessor' => true,
         // 'short_scalar_cast' => true,
         'single_blank_line_before_namespace' => true,
         // 'single_class_element_per_statement' => true,
         // 'space_after_semicolon' => true,
         // 'standardize_not_equals' => true,
         'ternary_operator_spaces' => true,
-        // 'trailing_comma_in_multiline_array' => true,
+        'trailing_comma_in_multiline_array' => true,
         'trim_array_spaces' => true,
         'unary_operator_spaces' => true,
         'whitespace_after_comma_in_array' => true,
