--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,5 +1,10 @@
 <?php
 
+$finder = PhpCsFixer\Finder::create()
+    ->exclude('tests/Stub')
+    ->in(__DIR__)
+;
+
 return PhpCsFixer\Config::create()
     ->setRules(array(
         '@PSR2' => true,
@@ -14,26 +19,23 @@ return PhpCsFixer\Config::create()
             'align_double_arrow' => false,
             'align_equals' => false,
         ),
-        // 'blank_line_after_opening_tag' => true,
-        // 'blank_line_before_return' => true,
         'braces' => array(
             'allow_single_line_closure' => true,
         ),
         'cast_spaces' => true,
-        // 'class_definition' => array('singleLine' => true),
         'concat_space' => array('spacing' => 'one'),
         'declare_equal_normalize' => true,
         'function_typehint_space' => true,
         'hash_to_slash_comment' => true,
         'include' => true,
         'lowercase_cast' => true,
-        // 'native_function_casing' => true,
-        // 'new_with_braces' => true,
-        // 'no_blank_lines_after_class_opening' => true,
-        // 'no_blank_lines_after_phpdoc' => true,
-        // 'no_empty_comment' => true,
-        // 'no_empty_phpdoc' => true,
-        // 'no_empty_statement' => true,
+        'native_function_casing' => true,
+        'new_with_braces' => true,
+        'no_blank_lines_after_class_opening' => true,
+        'no_blank_lines_after_phpdoc' => true,
+        'no_empty_comment' => true,
+        'no_empty_phpdoc' => true,
+        'no_empty_statement' => true,
         'no_extra_consecutive_blank_lines' => array(
             'curly_brace_block',
             'extra',
@@ -42,20 +44,20 @@ return PhpCsFixer\Config::create()
             'throw',
             'use',
         ),
-        // 'no_leading_import_slash' => true,
-        // 'no_leading_namespace_whitespace' => true,
-        // 'no_mixed_echo_print' => array('use' => 'echo'),
+        'no_leading_import_slash' => true,
+        'no_leading_namespace_whitespace' => true,
+        'no_mixed_echo_print' => array('use' => 'echo'),
         'no_multiline_whitespace_around_double_arrow' => true,
-        // 'no_short_bool_cast' => true,
+        'no_short_bool_cast' => true,
         'no_singleline_whitespace_before_semicolons' => true,
         'no_spaces_around_offset' => true,
-        // 'no_trailing_comma_in_list_call' => true,
-        // 'no_trailing_comma_in_singleline_array' => true,
-        // 'no_unneeded_control_parentheses' => true,
-        // 'no_unused_imports' => true,
+        'no_trailing_comma_in_list_call' => true,
+        'no_trailing_comma_in_singleline_array' => true,
+        'no_unneeded_control_parentheses' => true,
+        'no_unused_imports' => true,
         'no_whitespace_before_comma_in_array' => true,
         'no_whitespace_in_blank_line' => true,
-        // 'normalize_index_brace' => true,
+        'normalize_index_brace' => true,
         'object_operator_without_whitespace' => true,
         // 'php_unit_fqcn_annotation' => true,
         // 'phpdoc_align' => true,
@@ -76,14 +78,13 @@ return PhpCsFixer\Config::create()
         // 'phpdoc_trim' => true,
         // 'phpdoc_types' => true,
         // 'phpdoc_var_without_name' => true,
-        // 'pre_increment' => true,
         'return_type_declaration' => true,
         'self_accessor' => true,
-        // 'short_scalar_cast' => true,
+        'short_scalar_cast' => true,
         'single_blank_line_before_namespace' => true,
-        // 'single_class_element_per_statement' => true,
-        // 'space_after_semicolon' => true,
-        // 'standardize_not_equals' => true,
+        'single_class_element_per_statement' => true,
+        'space_after_semicolon' => true,
+        'standardize_not_equals' => true,
         'ternary_operator_spaces' => true,
         'trailing_comma_in_multiline_array' => true,
         'trim_array_spaces' => true,
@@ -93,4 +94,6 @@ return PhpCsFixer\Config::create()
     ))
     //->setIndent("\t")
     ->setRiskyAllowed(true)
-    ->setLineEnding("\n");
+    ->setLineEnding("\n")
+    ->setFinder($finder)
+    ;
