--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "ext-json": "*",
     "nikic/php-parser": "^4.4",
+    "psr/event-dispatcher": "^1.0",
     "psr/simple-cache": "^1.0",
     "symfony/console": "^5.1",
     "thecodingmachine/safe": "^1.1",
