--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -79,7 +79,7 @@ return PhpCsFixer\Config::create()
         // 'phpdoc_types' => true,
         // 'phpdoc_var_without_name' => true,
         'return_type_declaration' => true,
-        'self_accessor' => true,
+        //'self_accessor' => true,
         'short_scalar_cast' => true,
         'single_blank_line_before_namespace' => true,
         'single_class_element_per_statement' => true,
