--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   },
   "require": {
     "ext-json": "*",
+    "graphp/graphviz": "0.2.*",
     "nikic/php-parser": "^4.4",
     "psr/event-dispatcher": "^1.0",
     "psr/simple-cache": "^1.0",
