--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "mikey179/vfsstream": "^1.6",
     "phpspec/prophecy-phpunit": "^2.0",
     "phpunit/phpunit": "^9",
-    "roave/security-advisories": "dev-master"
+    "roave/security-advisories": "dev-master",
+    "vimeo/psalm": "^4.2"
   },
   "autoload": {
     "psr-4": {
