--- a/.container/Dockerfile
+++ b/.container/Dockerfile
@@ -1,12 +1,11 @@
 FROM php:8.0.3-cli-alpine
 
-# Install system dependencies
-RUN apk update && apk add git
-
 LABEL maintainer="roberto.diana@gmail.com"
+COPY src /var/www/html/src
+COPY vendor /var/www/html/vendor
+COPY bin /var/www/html/bin
+WORKDIR /var/www/html/
 
-RUN mkdir -p /etc/php.d
-RUN touch /etc/php.d/my-php.ini
-RUN echo "zend_extension=xdebug.so" >> /etc/php.d/my-php.ini
-RUN php -v
-WORKDIR /var/www/html
+# COPY .container/run.sh /var/www/html/bin/run.sh
+# RUN chmod +x /var/www/html/bin/run.sh
+# ENTRYPOINT ["/var/www/html/bin/run.sh"]
